--- a/extra.mk.in
+++ b/extra.mk.in
@@ -86,12 +86,10 @@ VORBIS_CFLAGS ?= @VORBIS_CFLAGS@
 VORBIS_LIBS ?= @VORBIS_LIBS@
 WAVPACK_CFLAGS ?= @WAVPACK_CFLAGS@
 WAVPACK_LIBS ?= @WAVPACK_LIBS@
-XCOMPOSITE_CFLAGS ?= @XCOMPOSITE_CFLAGS@
-XCOMPOSITE_LIBS ?= @XCOMPOSITE_LIBS@
+X11EXT_CFLAGS ?= @X11EXT_CFLAGS@
+X11EXT_LIBS ?= @X11EXT_LIBS@
 XML_CFLAGS ?= @XML_CFLAGS@
 XML_LIBS ?= @XML_LIBS@
-XRENDER_CFLAGS ?= @XRENDER_CFLAGS@
-XRENDER_LIBS ?= @XRENDER_LIBS@
 
 HAVE_LINUX ?= @HAVE_LINUX@
 HAVE_MSWINDOWS ?= @HAVE_MSWINDOWS@
